--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2024"
 [dependencies]
 axum = { version = "0.8.6", features = ["tokio"] }
 chrono = "0.4.42"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
 sqlx = { version = "0.8.6", features = ["runtime-tokio","sqlite"] }
 tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
